SERVER-10382 add error code if count command is interrupted